 o Removed deprecated classes / methods and features which are now supported by the JDK
 o Replaced Buffer interface with java.util.Queue
 o Added concept of split maps with respective interfaces Put / Get (see also package splitmap)
 o Added new Trie interface together with an implementation of a Patricia Trie


Changes since 4.0-alpha1
------------------------

 o [COLLECTIONS-488] Added "CollectionsUtils#matchesAll(Iterable, Predicate)" to test if all elements
                     of a collection match a given predicate. Thanks to Josh Cain.
 o [COLLECTIONS-485] Accept wildcard input where possible, e.g. in copy-constructors, Unmodifiable* decorators
                     and iterators. Thanks to Hollis Waite.
 o [COLLECTIONS-481] No collision detection/resolution was performed when calling "CompositeSet#addComposited(...)"
                     with more than one Set as argument. Additionally use varargs parameters instead of arrays
                     in CompositeSet and CompositeCollection constructor and addComposited method. Thanks to Hollis Waite.
 o [COLLECTIONS-480] Narrow return type of "BidiMap#values()" to Set as the values are required to be unique. Thanks to Hollis Waite.
 o [COLLECTIONS-468] Renamed CompliantBag to CollectionBag.
 o [COLLECTIONS-475] Fixed conversion of timeout parameters in "PassiveExpiringMap".


Removed classes
---------------

 o [COLLECTIONS-458] Removed unused class "AbstractUntypedCollectionDecorator<E, D>"
 o [COLLECTIONS-432] Removed "Buffer" interface and all its implementations and related classes.
                     Replaced by "java.util.Queue", see also section [New classes]
                     
   - PriorityBuffer: use either java.util.PriorityQueue or java.util.concurrent.PriorityBlockingQueue
   - SynchronizedBuffer: use the corresponding *BlockingQueue classes in java.util.concurrent
   - BoundedBuffer: use either ArrayBlockingBuffer(capacity) or LinkedBlockingBuffer(capacity) in java.util.concurrent